test/pass/internal/no_double_box.lly
define f[A](a: A):any
{
    return a
}

f(10.@(any)).@(integer)
