test/fail/exceptions/excep_in_anonymous.lly
#[
BadTypecastError: Cannot cast any containing type 'integer' to type 'string'.
Traceback:
    from excep_in_anonymous.lly:10: in f
    from excep_in_anonymous.lly:14: in __main__
]#

define f {
    var a: any = 10
    var s = a.@(string)
}

var function_list: list[function()] = [f, f, f]
function_list[0]()
